[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wik"
authors = [{name = "Yash Singh", email = "mailmeatyashsingh@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.0"
dynamic = ["version", "description"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console"
]
dependencies = ["beautifulsoup4", "requests"]

[project.urls]
Home = "https://github.com/yashsinghcodes/wik"

[project.scripts]
wik = "wik.wik:arguments"

[project.optional-dependencies]
dev = ["flit"]

[tool.flit.module]
name = "wik"
